--- a/.env.docker
+++ b/.env.docker
@@ -1,8 +1,8 @@
-GO_ENV=DEV
+GO_ENV=DOCKER-DEV
 
-SERVER_URL=127.0.0.1
+SERVER_URL=0.0.0.0
 
-MYSQL_HOST=127.0.0.1
+MYSQL_HOST=mariadb
 MYSQL_ROOT_PASSWORD=dev
 MYSQL_USER=john
 MYSQL_PASSWORD=dev
