--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,19 +2,20 @@ version: '3.8'
 services:
     # web:
     #     build: .
-    #     env_file: ./.env
+    #     env_file: ./.env.docker
     #     volumes: 
     #         - .:/go/src/app
     #     ports:
     #         - $GO_LOCAL_PORT:$GO_DOCKER_PORT
     #     restart: on-failure
     #     depends_on: 
-    #         - mariadb
+    #         mariadb:
+    #             condition: service_healthy
     #     environment: 
     #         MYSQL_HOST: mariadb
     mariadb:
         image: mariadb
-        env_file: ./.env
+        env_file: ./.env.docker
         environment: 
             MYSQL_ROOT_PASSWORD: $MYSQL_ROOT_PASSWORD
             MYSQL_USER: $MYSQL_USER
@@ -22,6 +23,11 @@ services:
             MYSQL_DATABASE: $MYSQL_DATABASE
         ports:
             - $MYSQL_LOCAL_PORT:$MYSQL_DOCKER_PORT
+        healthcheck:
+            test: "/usr/bin/mysql --user=root --password=$MYSQL_ROOT_PASSWORD --execute \"SHOW DATABASES;\""
+            interval: 2s
+            timeout: 20s
+            retries: 10
         volumes:
             - mysql:/var/lib/mysql
             - mysql_config:/etc/mysql
